--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip insall flake8
+        pip install flake8
 
     - name: Analysing the code with flake8
       run: |
